# utilities

./: .gitignore  .gitmodules  CMakeLists.txt  Json.hpp  LICENSE  Parser.hpp  README.md  axial_array.hpp  bag.hpp  callable.hpp  constexpr_counter.hpp  constexpr_parser.hpp  delegate.hpp  dynamic_array.hpp  example.cpp  fetch.hpp  function.hpp  function_utils.hpp  image_buffer.hpp  instances.hpp  lambda.hpp  linq.hpp  list_comprehension.hpp  match.hpp  meta_struct.hpp  multi_initializer_list.hpp  pa_function.hpp  pack_utils.hpp  serializer.hpp  simd.hpp  smart_tuple.hpp  state.hpp  string_literal.hpp  struct_tuple.hpp  thread_pool.hpp  trash.hpp  type_linker.hpp  type_utils.hpp  typed_any.hpp  utils.hpp  (+1 more)
assets/: data.json
cmake/modules/: json2hpp.cmake
libs/: BMP.h  CMakeLists.txt
